--- a/rtmp-errata-addenda.html
+++ b/rtmp-errata-addenda.html
@@ -1839,6 +1839,10 @@ Command Extended or Data Extended messages to each other. If Object Encoding
 3 is negotiated, client and server can use either the normal (<code>Type 20</code>
 and <code>Type 18</code>) or extended (<code>Type 17</code> and <code>Type 15</code>)
 message types at any time.<a href="#section-7.1.1-2" class="pilcrow">¶</a></p>
+<p id="section-7.1.1-3">Interoperability Note: The <code>connect</code> command <span class="bcp14">SHOULD</span>
+be sent in a <code>Type 20</code> Command message unless the client has prior
+knowledge that the server to which it is connecting supports Object Encoding
+3.<a href="#section-7.1.1-3" class="pilcrow">¶</a></p>
 </section>
 </div>
 <section id="section-7.1.2">
