fix typo ony -> only

--- a/rtmp-errata-addenda.html
+++ b/rtmp-errata-addenda.html
@@ -1708,7 +1708,7 @@ translation, so they <span class="bcp14">SHOULD NOT</span> be exceeded.<a href="
         <h3 id="name-alternative-transports-and-p">
 <a href="#section-6.1" class="section-number selfRef">6.1. </a><a href="#name-alternative-transports-and-p" class="section-name selfRef">Alternative Transports and Processing Possible</a>
         </h3>
-<p id="section-6.1-1">RTMP Chunk Stream is not the ony possible transport service for RTMP
+<p id="section-6.1-1">RTMP Chunk Stream is not the only possible transport service for RTMP
 Messages. This flexibility is stated in several places. For example:<a href="#section-6.1-1" class="pilcrow">¶</a></p>
 <blockquote id="section-6.1-2">
 The [sic] section specifies the format of RTMP messages that are transferred between
