fix missing <bcp14> markup on a MUST

--- a/rtmp-errata-addenda.html
+++ b/rtmp-errata-addenda.html
@@ -1435,7 +1435,7 @@ ruler across the top; this is a convenience for counting bits in individual
 fields and does not necessarily imply field alignment on a multiple of the
 ruler width.<a href="#section-2-2" class="pilcrow">¶</a></p>
 <p id="section-2-3">Unless specified otherwise, reserved fields <span class="bcp14">SHOULD</span> be set
-to 0 by a sender and MUST be ignored by a receiver.<a href="#section-2-3" class="pilcrow">¶</a></p>
+to 0 by a sender and <span class="bcp14">MUST</span> be ignored by a receiver.<a href="#section-2-3" class="pilcrow">¶</a></p>
 <p id="section-2-4">The procedural syntax of this specification defines correct and error-free
 encoded inputs to a parser.  The procedural syntax does not describe a fully
 featured parser, including error detection and handling.  Implementations
