rtmp-uris change TBD to actual URI

--- a/rtmp-uris/rtmp-uris.html
+++ b/rtmp-uris/rtmp-uris.html
@@ -1650,7 +1650,8 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
  <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.1-2.22.1" class="pilcrow">¶</a></p>
 <p id="section-8.1-2.22.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
  <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.1-2.22.2" class="pilcrow">¶</a></p>
-<p id="section-8.1-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024, <code>&lt;TBD&gt;</code>.<a href="#section-8.1-2.22.3" class="pilcrow">¶</a></p>
+<p id="section-8.1-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.1-2.22.3" class="pilcrow">¶</a></p>
 <p id="section-8.1-2.22.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.1-2.22.4" class="pilcrow">¶</a></p>
 </dd>
         <dd class="break"></dd>
@@ -1743,7 +1744,8 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
  <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.2-2.22.1" class="pilcrow">¶</a></p>
 <p id="section-8.2-2.22.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
  <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.2-2.22.2" class="pilcrow">¶</a></p>
-<p id="section-8.2-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024, <code>&lt;TBD&gt;</code>.<a href="#section-8.2-2.22.3" class="pilcrow">¶</a></p>
+<p id="section-8.2-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.2-2.22.3" class="pilcrow">¶</a></p>
 <p id="section-8.2-2.22.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.2-2.22.4" class="pilcrow">¶</a></p>
 </dd>
         <dd class="break"></dd>
@@ -1841,7 +1843,8 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
  RFC 7425, December 2014.<a href="#section-8.3-2.22.2" class="pilcrow">¶</a></p>
 <p id="section-8.3-2.22.3">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
  <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.3-2.22.3" class="pilcrow">¶</a></p>
-<p id="section-8.3-2.22.4">Thornburgh, M., "RTMP Family URI Schemes", July 2024, <code>&lt;TBD&gt;</code>.<a href="#section-8.3-2.22.4" class="pilcrow">¶</a></p>
+<p id="section-8.3-2.22.4">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.3-2.22.4" class="pilcrow">¶</a></p>
 </dd>
         <dd class="break"></dd>
 </dl>
