rtmp-uris fix IANA Considerations references formatting

--- a/rtmp-uris/rtmp-uris.html
+++ b/rtmp-uris/rtmp-uris.html
@@ -1645,14 +1645,20 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
           <dd class="break"></dd>
 <dt id="section-8.1-2.21">References:</dt>
           <dd style="margin-left: 1.5em" id="section-8.1-2.22">
-            <p id="section-8.1-2.22.1">Parmar, H., Ed. and M. Thornburgh, Ed., "Adobe’s Real Time
+            <ul class="normal ulEmpty">
+<li class="normal ulEmpty" id="section-8.1-2.22.1.1">Parmar, H., Ed. and M. Thornburgh, Ed., "Adobe's Real Time
  Messaging Protocol" ("RTMP Specification"), December 2012,
- <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.1-2.22.1" class="pilcrow">¶</a></p>
-<p id="section-8.1-2.22.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.1-2.22.2" class="pilcrow">¶</a></p>
-<p id="section-8.1-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.1-2.22.3" class="pilcrow">¶</a></p>
-<p id="section-8.1-2.22.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.1-2.22.4" class="pilcrow">¶</a></p>
+ <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.1-2.22.1.1" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.1-2.22.1.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.1-2.22.1.2" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.1-2.22.1.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.1-2.22.1.3" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.1-2.22.1.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.1-2.22.1.4" class="pilcrow">¶</a>
+</li>
+            </ul>
 </dd>
         <dd class="break"></dd>
 </dl>
@@ -1739,14 +1745,20 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
           <dd class="break"></dd>
 <dt id="section-8.2-2.21">References:</dt>
           <dd style="margin-left: 1.5em" id="section-8.2-2.22">
-            <p id="section-8.2-2.22.1">Parmar, H., Ed. and M. Thornburgh, Ed., "Adobe’s Real Time
+            <ul class="normal ulEmpty">
+<li class="normal ulEmpty" id="section-8.2-2.22.1.1">Parmar, H., Ed. and M. Thornburgh, Ed., "Adobe's Real Time
  Messaging Protocol" ("RTMP Specification"), December 2012,
- <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.2-2.22.1" class="pilcrow">¶</a></p>
-<p id="section-8.2-2.22.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.2-2.22.2" class="pilcrow">¶</a></p>
-<p id="section-8.2-2.22.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.2-2.22.3" class="pilcrow">¶</a></p>
-<p id="section-8.2-2.22.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.2-2.22.4" class="pilcrow">¶</a></p>
+ <code>&lt;https://veovera.org/docs/legacy/rtmp-v1-0-spec.pdf&gt;</code>.<a href="#section-8.2-2.22.1.1" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.2-2.22.1.2">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.2-2.22.1.2" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.2-2.22.1.3">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.2-2.22.1.3" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.2-2.22.1.4">Lozben, S., "Enhanced RTMP", June 2024, <code>&lt;https://veovera.org/&gt;</code>.<a href="#section-8.2-2.22.1.4" class="pilcrow">¶</a>
+</li>
+            </ul>
 </dd>
         <dd class="break"></dd>
 </dl>
@@ -1837,14 +1849,20 @@ rtmp-connect-arg = *(unreserved / pct-encoded / sub-delims)
           <dd class="break"></dd>
 <dt id="section-8.3-2.21">References:</dt>
           <dd style="margin-left: 1.5em" id="section-8.3-2.22">
-            <p id="section-8.3-2.22.1">Thornburgh, M., "Adobe's Secure Real-Time Media Flow
- Protocol", RFC 7016, November 2013.<a href="#section-8.3-2.22.1" class="pilcrow">¶</a></p>
-<p id="section-8.3-2.22.2">Thornburgh, M., "Adobe's RTMFP Profile for Flash Communication",
- RFC 7425, December 2014.<a href="#section-8.3-2.22.2" class="pilcrow">¶</a></p>
-<p id="section-8.3-2.22.3">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.3-2.22.3" class="pilcrow">¶</a></p>
-<p id="section-8.3-2.22.4">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
- <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.3-2.22.4" class="pilcrow">¶</a></p>
+            <ul class="normal ulEmpty">
+<li class="normal ulEmpty" id="section-8.3-2.22.1.1">Thornburgh, M., "Adobe's Secure Real-Time Media Flow
+ Protocol", RFC 7016, November 2013.<a href="#section-8.3-2.22.1.1" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.3-2.22.1.2">Thornburgh, M., "Adobe's RTMFP Profile for Flash Communication",
+ RFC 7425, December 2014.<a href="#section-8.3-2.22.1.2" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.3-2.22.1.3">Thornburgh, M., "RTMP Errata and Addenda", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/&gt;</code>.<a href="#section-8.3-2.22.1.3" class="pilcrow">¶</a>
+</li>
+              <li class="normal ulEmpty" id="section-8.3-2.22.1.4">Thornburgh, M., "RTMP Family URI Schemes", July 2024,
+ <code>&lt;https://zenomt.github.io/rtmp-errata-addenda/rtmp-uris/&gt;</code>.<a href="#section-8.3-2.22.1.4" class="pilcrow">¶</a>
+</li>
+            </ul>
 </dd>
         <dd class="break"></dd>
 </dl>
